org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI
$Id$

ChangeLog

2012-03-27  2.0.21.beta
	- OntSevlet: New "ontology exists" (oe) request dispatched
	- IOntClient.isRegisteredOntologyUri: removed unnecessary acceptEntries parameter.

2012-01-06  2.0.20.beta
	- WebContent/sparql.html: use relative URL (/ont?...), which will work in general
	  as well. (besides it facilitates preliminary tests in the current server migration.
	  
	- TripleStore._createTripleStoreInstance: now checks the new "agraph.version" 
	  configuration property ({sample.}build.properties) to determine which AG triple
	  store implementation to use.
	  


2011-12-15  2.0.20.beta
	Starting triple store implementation based on AllegroGraph 4.x, which is a major 
	version change wrt version 3.3, the one we've been using so far.
	Ref: http://www.franz.com/agraph/support/documentation/current/convert3to4.html
	
	It seems the two client libraries (agraph.jar and agraph-4.4.jar, which are for
	versions 3.3 and 4.4 respectively) can be used simultaneously because the base
	AG types live in different packages. This will facilitate the transitioning.

	Libraries copied from AG 4.4 to WebContent/WEB_INF/lib/
		- agraph-4.4.jar
		- openrdf-sesame-2.3.2-onejar.jar
		
	New package for the AG4 based implementation:
	     org.mmisw.ont.triplestore.allegro4
	     
	The AG4 SPARQL endpoint will be the main mechanism for the allegro4.Ag4TripleStore 
	implementation.
	
	Preliminary exploration at this point.
	     
	     
	

2011-07-13  2.0.19.beta
	What happended with the '$' version indicator for ontology/term URI requests? A request 
	like http://mmisw.org/ont/mmi/$/device was supported long time ago (by a redirection to
	the explicit latest version, eg., http://mmisw.org/ont/mmi/20090413T193509/device).
	 
	- In general, the '$' mechanism for redirection to the latest version of an ontology
	  or term hasn't been supported for a long time. In particular, we are not loading